@@ -3,13 +3,34 @@ set ( ACTIONS_INCLUDES
     actions.h
 )
 
-add_library(actions STATIC
-    ${ACTIONS_INCLUDES}
+set (ACTION_SOURCES
     actions.cc
     ips_actions.cc
     ips_actions.h
 )
 
+set( PLUGIN_LIST
+    act_reject.cc
+    )
+
+if (STATIC_IPS_ACTIONS)
+
+    add_library ( ips_actions STATIC
+        ${ACTION_SOURCES}
+        ${PLUGIN_LIST}
+    )
+
+else (STATIC_IPS_ACTIONS)
+
+    add_library ( ips_actions STATIC
+        ${ACTION_SOURCES}
+    )
+
+    add_shared_library(act_reject ips_actions act_reject.cc)
+
+endif (STATIC_IPS_ACTIONS)
+
 install (FILES ${ACTIONS_INCLUDES}
     DESTINATION "${INCLUDE_INSTALL_PATH}/actions"
 )
+
